--- a/index.html
+++ b/index.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" />
     <script src="https://use.fontawesome.com/05bb7a8874.js"></script>
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Rosie</title>
 </head>
+
 <body>
     <header>
-
+        <div class="row">
+            <a href="index.html" class="col-md-4 logo"></a>
+            <div class="col-md-8"></div>
+        </div>
     </header>
     <section>
 
     </section>
     <footer>
-        
+
     </footer>
 </body>
+
 </html>
