--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,13 @@
         type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Document</title>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js">
+    </script>
+    <script type="text/javascript">
+        (function () {
+            emailjs.init("user_TJJYMaTD8WNx5eFtVAj2w");
+        })();
+    </script>
 </head>
 
 <body>
@@ -40,8 +47,8 @@
                                         aria-hidden="true"></i><span>Contact</span></a>
                             </li>
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-download menuitem">
-                                <a href="assets/cv/sample-cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-download"
-                                        aria-hidden="true"></i><span>Download CV</span></a>
+                                <a href="assets/cv/sample-cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i
+                                        class="fa fa-download" aria-hidden="true"></i><span>Download CV</span></a>
                             </li>
                         </ul>
                     </div>
@@ -55,10 +62,12 @@
                 <h3 class='contact-heading uppercase text-center'>Got a project in mind?</h3>
                 <h5 class='uppercase text-center'>Let's work together!</h5>
                 <div class="center-form">
-                    <form>
+                    <form onsubmit="return sendMail(this);">
                         <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required>
-                        <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required>
-                        <textarea name="projectsummary" id="projectsummary" class="form-control" rows="5" placeholder="Project description" required></textarea>
+                        <input type="email" name="emailaddress" id="emailaddress" class="form-control" placeholder="Email"
+                            required>
+                        <textarea name="projectsummary" id="projectsummary" class="form-control" rows="5"
+                            placeholder="Project description" required></textarea>
                         <div class="form-row text-center">
                             <div class="col">
                                 <button type="submit" class="btn btn-secondary">Send Project Request</button>
@@ -131,6 +140,7 @@
             </div>
         </div>
     </footer>
+    <script src="assets/js/sendEmail.js"></script>
 </body>
 
 </html>
